context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.0/tasks/mvp_tasks_simulation_form.md
# Задачи для формы создания/редактирования Симуляции

## Обзор

**Компонент:** Форма создания/редактирования Симуляции
**Путь в макете:** Кнопка "Создать симуляцию" → форма / Кнопка "Редактировать" на детальной → форма
**Статус:** Адаптация существующей формы

### Что включает форма:

**Основные поля:**
- Название (обязательное)
- Внедрение (выбор из списка, обязательное)
- Описание (опционально)

**Функционал:**
- Создание новой симуляции
- Редактирование существующей симуляции
- Валидация полей
- Сохранение в статусе draft

**Права доступа:**
- Создать может: ПРМ (свой продукт), Админ
- Редактировать может: ПРМ (свой продукт), Админ

---

## AN-SF1: Аналитика формы Симуляции

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 0.5 дня

### Summary
Детализация требований для адаптации формы создания/редактирования Симуляции

### Description

Провести аналитику для адаптации формы Симуляции:

1. **Детализация бизнес-требований:**
   - Определить обязательные и опциональные поля
   - Уточнить правила валидации
   - Определить начальный статус (draft)

2. **Спецификация UI/UX:**
   - Дизайн формы (поля, кнопки)
   - Спецификация валидации
   - Сообщения об ошибках

3. **Спецификация API контракта:**
   - POST /api/simulations/ - создание
   - PUT /api/simulations/{id}/ - обновление

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

---

## BE-SF1: Backend для формы Симуляции

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 1 день

### Summary
Адаптация Backend для создания/редактирования Симуляции

### Description

Адаптировать Backend для формы Симуляции:

1. **API Endpoint: POST /api/simulations/**

   **Параметры запроса:**
   ```json
   {
     "name": "Симуляция оптимизации лимитов",
     "deployment_id": "uuid",
     "description": "Описание симуляции"
   }
   ```

   **Бизнес-логика:**
   - Валидация: название обязательно
   - Валидация: deployment_id обязателен и существует
   - Валидация: пользователь имеет право создавать (ПРМ своего продукта, Админ)
   - Создание симуляции в статусе draft
   - Установка created_by = текущий пользователь

2. **API Endpoint: PUT /api/simulations/{id}/**

   **Параметры запроса:**
   ```json
   {
     "name": "Обновленное название",
     "description": "Обновленное описание"
   }
   ```

   **Бизнес-логика:**
   - Валидация: пользователь имеет право редактировать
   - Валидация: симуляция в статусе draft (нельзя редактировать running/completed)
   - Обновление полей

3. **Права доступа:**
   - Создать может: ПРМ (свой продукт), Админ
   - Редактировать может: ПРМ (свой продукт), Админ
   - HTTP 403 если нет прав

### Acceptance Criteria

- [ ] POST /api/simulations/ реализован
- [ ] PUT /api/simulations/{id}/ реализован
- [ ] Валидация полей работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-SF1 (требуется спецификация)

---

## FE-SF1: Frontend для формы Симуляции

**Тип:** Story
**Приоритет:** Средний
**Оценка:** 2 дня

### Summary
Адаптация UI формы создания/редактирования Симуляции

### Description

Адаптировать Frontend для формы Симуляции:

1. **Компонент SimulationForm:**
   - Режим создания (create)
   - Режим редактирования (edit)
   - Валидация полей
   - Responsive дизайн

2. **Поля формы:**
   - Название (TextField, обязательное, max 255 символов)
   - Внедрение (Autocomplete, обязательное, только для создания)
   - Описание (TextField multiline, опционально)

3. **Валидация:**
   - Название: обязательное, не пустое
   - Внедрение: обязательное (только при создании)
   - Показ ошибок под полями

4. **Кнопки:**
   - "Отмена" - закрытие формы без сохранения
   - "Сохранить" - сохранение и переход к детальной

5. **Loading и Error состояния:**
   - Disabled кнопка "Сохранить" при отправке
   - Spinner при сохранении
   - Toast уведомления при успехе/ошибке

6. **API интеграция:**
   - SimulationService.create(data)
   - SimulationService.update(id, data)
   - DeploymentService.getList() - для выбора внедрения
   - Обработка ошибок (400, 403, 500)

### Acceptance Criteria

- [ ] SimulationForm компонент реализован
- [ ] Режим создания работает
- [ ] Режим редактирования работает
- [ ] Валидация полей работает
- [ ] Autocomplete для внедрения работает
- [ ] Кнопки "Отмена" и "Сохранить" работают
- [ ] Loading состояние работает
- [ ] Error состояние отображается
- [ ] Toast уведомления работают
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-SF1 (требуется UI спецификация)
- BE-SF1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-SF1 (0.5 дня)
  ↓
BE-SF1 (1 день)
  ↓
FE-SF1 (2 дня)
```

**Общая длительность (критический путь):** 3.5 дня

---

## ✅ Ключевые особенности

1. **Адаптация существующей формы** - минимальные изменения
2. **Простая форма** - только основные поля
3. **Валидация** - обязательные поля
4. **Autocomplete для внедрения** - удобный выбор
5. **Права доступа** - ПРМ (свой продукт), Админ
6. **Статус draft** - при создании

---